fix font on mobile for input css

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -28,7 +28,7 @@ input, button, input:-internal-autofill-selected {
     -webkit-appearance: none;
     all: unset;
     font-size: 16px;
-    font-family: var(--font-josefin);
+    font-family: Arial, Helvetica, sans-serif;
   }
 
   input[type="color"],
